# snapd-xdg-open

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  snappy-url-helper.c  xdg-open
data/: Makefile.am  xdg-open
debian/: README.Debian  README.source  changelog  control  copyright  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  snapd-xdg-open.cron.d.ex  snapd-xdg-open.default.ex  snapd-xdg-open.doc-base.EX  watch.ex
src/: Makefile.am  snapd-xdg-open.c  xdg-open.c
